@@ -4,6 +4,8 @@
 
 	* lib/rubygems/specification.rb:  Check bindir for executables, not
 	  root.  Bug reported by David Chelimsky.
+	* lib/rubygems/commands/cleanup_command.rb:  Clean up --user-install
+	  gems.  Bug #25516 by Brett Eisenberg.
 
 2009-05-01  James Tucker  <jftucker@gmail.com>
 
